...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_overlay" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_back"
                    app:fabSize="normal"
...
