...
                        app:hintTextColor="@color/slate_400"
                        app:counterEnabled="true"
                        app:counterMaxLength="150"
                        app:counterTextColor="@color/slate_400">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:minLines="4"
                            android:maxLines="6"
                            android:maxLength="150"
...
